--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,22 +4,19 @@ on:
     branches:
       - main
 jobs:
-  lint:
+  build-and-deploy:
     runs-on: self-hosted
+
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@main
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+    - name: Set up Node.js version
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.13.0'
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: npm-
-
-      - name: Install dependencies
-        run: npm ci --ignore-scripts
+    - name: npm install, build, and test
+      run: |
+        npm install
+        npm run build --if-present
+        npm run test --if-presen
