--- a/workflows/test.yml
+++ b/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        npm run test --if-presen
+        npm run test --if-present
