--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,6 @@ jobs:
       run: |
         npm install
         npm audit fix
+        npm test
         npm run build --if-present
         npm run test --if-present
