Adding the Sonarqube

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,9 @@ jobs:
       run: |
         npm install
         npm audit fix
+    
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@main
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
