--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         npm audit fix
     
     - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
+      uses: docker://sonarsource/sonar-scanner-cli:latest
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
