Adding the Sonarqube

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm audit fix
+ #       npm audit fix
     
     - name: SonarQube Scan
       uses: docker://sonarsource/sonar-scanner-cli:latest
