--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build-and-deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@main
@@ -19,9 +19,11 @@ jobs:
       run: |
         npm install
         npm audit fix
-    
+      
+   
     - name: SonarQube Scan
-      uses: docker://sonarsource/sonar-scanner-cli:latest
+      uses: kitabisa/sonarqube-action@v1.2.0
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+         host : ${{ secrets.SONAR_TOKEN }}
+         login: ${{ secrets.SONAR_HOST_URL }}
+      
