--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,8 @@ jobs:
       
    
     - name: SonarQube Scan
-      uses: kitabisa/sonarqube-action@v1.2.0
+      uses: sonarsource/sonarqube-scan-action@master
       env:
-         host : ${{ secrets.SONAR_TOKEN }}
-         login: ${{ secrets.SONAR_HOST_URL }}
+         SONAR_TOKEN : ${{ secrets.SONAR_TOKEN }}
+         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       
