--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@main
@@ -19,11 +19,14 @@ jobs:
       run: |
         npm install
         npm audit fix
-      
-   
-    - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
       env:
          SONAR_TOKEN : ${{ secrets.SONAR_TOKEN }}
          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      
+   
+   # - name: SonarQube Scan
+   #   uses: sonarsource/sonarqube-scan-action@master
+   #   env:
+   #      SONAR_TOKEN : ${{ secrets.SONAR_TOKEN }}
+   #      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       
