--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,14 +19,12 @@ jobs:
       run: |
         npm install
         npm audit fix
+
+      
+   
+    - name: SonarQube Scan
+      uses: docker://sonarsource/sonarqube-scan-action@master
       env:
          SONAR_TOKEN : ${{ secrets.SONAR_TOKEN }}
          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      
-   
-   # - name: SonarQube Scan
-   #   uses: sonarsource/sonarqube-scan-action@master
-   #   env:
-   #      SONAR_TOKEN : ${{ secrets.SONAR_TOKEN }}
-   #      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       
