--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       
    
     - name: SonarQube Scan
-      uses: docker://sonarqube:latest
+      uses: kitabisa/sonarqube-action@master
       env:
          SONAR_TOKEN : ${{ secrets.SONAR_TOKEN }}
          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
